# ship-and-tell

./: .gitignore  README.md  pyproject.toml  spec.md
skills/ship-and-tell/: SKILL.md
src/ship_and_tell/: claude_code.py  git_activity.py  github_activity.py  server.py  sources.py  ui.py  ui_launcher.py  vault.py
