[project]
name = "ship-and-tell"
version = "0.1.0"
description = "Turn coding sessions into tweets, articles, and engineering insights."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.30",
]

[project.scripts]
ship-and-tell-mcp = "ship_and_tell.server:main"
ship-and-tell-ui = "ship_and_tell.ui_launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ship_and_tell"]
